feedback following chat with dean

--- a/src/Atlas/FrontEndBundle/Resources/views/Page/booking.html.twig
+++ b/src/Atlas/FrontEndBundle/Resources/views/Page/booking.html.twig
@@ -17,173 +17,17 @@
 <!--=== Content Part ===-->
 <div class="container">		
     <div class="row-fluid">
-        <div class="span4">
-            <div class="myallocator">
-                <iframe src="https://myallocator.com/booknow/Ne96YOAywhUCXR1S-3kQEQ" style="width: 370px; height: 250px; border: none;padding:0;margin:0" frameBorder="0" allowtransparency="true"></iframe>
-            </div>
-        </div>
-        <div class="span4">
+
+        {% include '::column_left.html.twig' %}
+
+        <div class="span6">
             <div class="headline">
-                <h3>FAQ</h3>
-            </div>
-            <div class="accordion acc-home margin-bottom-40" id="accordion2">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-                            Nearest tube / bus stop to the hostel?
-                        </a>
-                    </div>
-                    <div id="collapseOne" class="accordion-body in collapse" style="height: auto;">
-                        <div class="accordion-inner">
-                            bar 1
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                            What is the address of the hostel?
-                        </a>
-                    </div>
-                    <div id="collapseTwo" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 2
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-                            What do i need to check in / out?
-                        </a>
-                    </div>
-                    <div id="collapseThree" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 3
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                            What time do i need to check in / out?
-                        </a>
-                    </div>
-                    <div id="collapseFour" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 4
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
-                            What is your policy for under 18s?
-                        </a>
-                    </div>
-                    <div id="collapseFive" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 5
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseSix">
-                            What is included in the price?
-                        </a>
-                    </div>
-                    <div id="collapseSix" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 5
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseSeven">
-                            How long is reception open for?
-                        </a>
-                    </div>
-                    <div id="collapseSeven" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 5
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseEight">
-                            Where can i store my luggage?
-                        </a>
-                    </div>
-                    <div id="collapseEight" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 5
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseNine">
-                            Do you have wifi in the hostel?
-                        </a>
-                    </div>
-                    <div id="collapseNine" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 5
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTen">
-                            Do you serve breakfast?
-                        </a>
-                    </div>
-                    <div id="collapseTen" class="accordion-body collapse" style="height: 0px;">
-                        <div class="accordion-inner">
-                            bar 5
-                        </div>
-                    </div>
-                </div><!--/accordion-group-->
+                <h3>Book Now!</h3>
             </div>
         </div>
-    	<div class="span4">
-            <!-- Our Services -->
-            <div class="who margin-bottom-30">
-                <div class="headline">
-                    <h3>Features</h3>
-                </div>
-                <p>At vero eos et accusamus et iusto odio dign issimos ducimus qui blanditiis iusto.</p>
-                <ul class="unstyled">
-                    <li><a href="#"><i class="icon-ok"></i>Central Location</a></li>
-                    <li><a href="#"><i class="icon-ok"></i>Secure Lockers</a></li>
-                    <li><a href="#"><i class="icon-ok"></i>Free Wi-Fi</a></li>
-                    <li><a href="#"><i class="icon-ok"></i>Common Kitchen</a></li>
-                    <li><a href="#"><i class="icon-ok"></i>Social Activities</a></li>
-                    <li><a href="#"><i class="icon-ok"></i>Hostel cleaned every day</a></li>
-                </ul>
-            </div>
-            <!-- Contact Us -->
-            <div class="who margin-bottom-30">
-                <div class="headline"><h3>Contact Us</h3></div>
-                <p>We have staff working 24 hours a day, 7 days a week</p>
-                <ul class="unstyled">
-                    <li><i class="icon-home"></i>16 Talbot Street, London, Paddington, W2 5LH</li>
-                    <li><a href="mailto:info@atlashostels.com"><i class="icon-envelope-alt"></i>info@atlashostels.com</a></li>
-                    <li><i class="icon-phone-sign"></i>0845 519 9448</li>
-                </ul>
-            </div>
-        </div><!--/span3-->
+
+        {% include '::column_right.html.twig' %}
+
     </div><!--/row-fluid-->        
 </div><!--/container-->		
 <!--=== End Content Part ===-->
