--- a/src/Atlas/FrontEndBundle/Resources/views/Page/home.html.twig
+++ b/src/Atlas/FrontEndBundle/Resources/views/Page/home.html.twig
@@ -386,22 +386,7 @@
 <!--=== Content Part ===-->
 <div class="container">		
     <div class="row-fluid">
-    	<div class="span3">
-            <!-- Monthly Newsletter -->
-            <div class="headline"><h3>Monthly Newsletter</h3></div>	
-            <p>Subscribe to our newsletter and stay up to date with the latest news and deals!</p>
-            <form class="form-inline">
-                <div class="input-append">
-                    <input type="text" placeholder="Email Address" class="input-medium">
-                    <button class="btn-u">Subscribe</button>
-                </div>
-            </form>	
-            <div class="headline"><h3>Facebook</h3></div>
-            <div style="background:#fff;width:270px;overflow:hidden;" class="fb-like-box" data-href="http://www.facebook.com/pages/Atlas-Hostels-Plc/168741279912015" data-width="292" data-height="400" data-show-faces="true" data-stream="false" data-show-border="false" data-header="true"></div>
-            <div class="headline"><h3>Location</h3></div>
-            <div id="map" class="sidebar map margin-bottom-40"></div>
-
-        </div>
+        {% include '::column_left.html.twig' %}
     	<div class="span6">
             <div id="myCarousel" class="carousel slide" style="margin-top:20px">
                 <div class="carousel-inner">
@@ -427,12 +412,13 @@
                         </div>
                     </div>
                 </div>
+{#
                 <div class="carousel-arrow">
                     <a data-slide="prev" href="#myCarousel" class="left carousel-control"><i class="icon-angle-left"></i></a>
                     <a data-slide="next" href="#myCarousel" class="right carousel-control"><i class="icon-angle-right"></i></a>
                 </div>
+#}
             </div>
-
             <!-- About Us -->
             <div class="headline">
                 <h3>Atlas Hostels</h3>
@@ -454,49 +440,14 @@
             </blockquote>
 
         </div>
-    	<div class="span3">
-            <div class="myallocator" style="margin-top:20px;">
-                <iframe src="https://myallocator.com/ext/booknow.xt?apikey=raG4kbvrwUFmelDCY1btDg" style="width: 350px; height: 300px; border: none" allowtransparency="true"></iframe>
-            </div>
-            <div class="headline"><h3>Things to Do</h3></div>
-            <div class="posts margin-bottom-20">
-                <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="/assets/img/sliders/elastislide/6.jpg" alt=""></a></dt>
-                    <dd>
-                        <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p> 
-                    </dd>
-                </dl>
-                <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="/assets/img/sliders/elastislide/10.jpg" alt=""></a></dt>
-                    <dd>
-                        <p><a href="#">Lorem sequat ipsum dolor lorem sunt aliqua put a bird sit amet consectetur.</a></p> 
-                    </dd>
-                </dl>
-                <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="/assets/img/sliders/elastislide/11.jpg" alt=""></a></dt>
-                    <dd>
-                        <p><a href="#">It works on all major web browsers, tablets and aliqua lorem sequat ipsum.</a></p> 
-                    </dd>
-                </dl>
-            </div>
-
-            <div class="headline"><h3>Follow us</h3></div>
-
-            <div style="float:left;">
-                <a href="#"><img src="https://twitter.com/images/resources/twitter-bird-white-on-blue.png" height="150" width="150"></a>
-            </div>
-
-            <div style="float:right;">
-                <a href="#"><img src="/assets/img/Free-Wifi.png" height="100" width="100"></a>
-            </div>
-
-        </div>
+        {% include '::column_right.html.twig' %}
     </div><!--/row-fluid-->	
     <!--//End About Us -->
+
 </div><!--/container-->		
 <!-- End Content Part -->
 {% endblock %}
-
+{#
 {% block footer_js %}
 <!-- JS Global Compulsory -->           
 <script type="text/javascript" src="/assets/js/jquery-1.8.2.min.js"></script>
@@ -504,7 +455,6 @@
 <script type="text/javascript" src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script> 
 <!-- JS Implementing Plugins -->           
 <script type="text/javascript" src="/assets/plugins/flexslider/jquery.flexslider-min.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <script type="text/javascript" src="/assets/plugins/gmap/gmap.js"></script>
 <script type="text/javascript" src="/assets/plugins/back-to-top.js"></script>
 <!-- JS Page Level -->           
@@ -521,3 +471,4 @@
 <script type="text/javascript" src="/assets/js/respond.js"></script>
 <![endif]-->
 {% endblock %}
+#}
