--- a/src/Atlas/FrontEndBundle/Resources/views/Page/rooms.html.twig
+++ b/src/Atlas/FrontEndBundle/Resources/views/Page/rooms.html.twig
@@ -16,7 +16,10 @@
 <!--=== Content Part ===-->
 <div class="container">		
     <div class="row-fluid">
-    	<div class="span9">
+
+        {% include '::column_left.html.twig' %}
+
+    	<div class="span6">
             <!-- Tabs -->
             <div class="headline"><h3>4 Bed Dorm</h3></div>
             <ul class="nav nav-tabs tabs">
@@ -160,31 +163,7 @@
             <!-- //End Recent Works -->
         </div><!--/span9-->
 
-    	<div class="span3">
-            <!-- Our Services -->
-            <div class="who margin-bottom-30">
-                <div class="headline"><h3>Our Services</h3></div>
-                <p>At vero eos et accusamus et iusto odio dign issimos ducimus qui blanditiis iusto.</p>
-                <ul class="unstyled">
-                    <li><a href="#"><i class="icon-desktop"></i>Vivamus imperdiet condimentum</a></li>
-                    <li><a href="#"><i class="icon-bullhorn"></i>Anim pariatur cliche squid</a></li>
-                    <li><a href="#"><i class="icon-globe"></i>Eget placerat felis consectetur</a></li>
-                    <li><a href="#"><i class="icon-group"></i>Condimentum diam eget placerat</a></li>
-                </ul>
-            </div>
-
-            <!-- Contact Us -->
-            <div class="who margin-bottom-30">
-                <div class="headline"><h3>Contact Us</h3></div>
-                <p>Vero facilis est etenim a feugiat cupiditate non quos etrerum facilis.</p>
-                <ul class="unstyled">
-                    <li><a href="#"><i class="icon-home"></i>5B amus ED554, New York, US</a></li>
-                    <li><a href="#"><i class="icon-envelope-alt"></i>info@example.com</a></li>
-                    <li><a href="#"><i class="icon-phone-sign"></i>1(222) 5x86 x97x</a></li>
-                    <li><a href="#"><i class="icon-globe"></i>http://www.example.com</a></li>
-                </ul>
-            </div>
-        </div><!--/span3-->
+        {% include '::column_right.html.twig' %}
     </div><!--/row-fluid-->        
 </div><!--/container-->		
 <!--=== End Content Part ===-->
