--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -53,16 +53,23 @@
 <div class="top">
     <div class="container">                 
         <div class="row-fluid">
+
+            {% block logo %}
+            <!-- Logo -->       
+            <div class="logo">                                             
+                <a href="/"><img width="219" height="106" id="logo-header" src="/assets/img/atlashostels.png" alt="Atlas Hostels" title="Atlas Hostels"></a>
+            </div><!-- /logo -->                  
+            {% endblock %}
+
             <ul class="social-icons" style="float:right;width:105px;">
                 <li><a href="#" data-original-title="Facebook" class="social_facebook"></a></li>
                 <li><a href="#" data-original-title="Twitter" class="social_twitter"></a></li>
                 <li><a href="#" data-original-title="Pinterest" class="social_pintrest"></a></li>
             </ul>
-            <ul class="loginbar inline" style="float:right;width:300px;">
+            <ul class="loginbar inline" style="float:right;width:340px;">
                 <li><a href="mailto:info@atlashostels.com"><i class="icon-envelope-alt"></i> info@atlashostels.com</a></li> 
                 <li><a><i class="icon-phone-sign"></i> 0845 519 9448</a></li>   
             </ul>
-
         </div>                        
     </div><!--/container-->     
 </div><!--/top-->
@@ -73,12 +80,6 @@
 <!--=== Header ===-->
 <div class="header">               
     <div class="container"> 
-        {% block logo %}
-        <!-- Logo -->       
-        <div class="logo">                                             
-            {# <a href="/"><img id="logo-header" src="/assets/img/logo2-default.png" alt="Logo"></a> #}
-        </div><!-- /logo -->                  
-        {% endblock %}
 
         {% block navbar %}
         <!-- Menu -->       
@@ -95,7 +96,7 @@
                             <a href="{{ path('atlas_front_end_homepage') }}">Home</a>
                         </li>
                         <li>
-                            <a href="{{ path('atlas_front_end_booking') }}">Booking</a>
+                            <a href="{{ path('atlas_front_end_booking') }}">Book Now!</a>
                         </li>
                         <li>
                             <a href="{{ path('atlas_front_end_location') }}">Location</a>
@@ -107,7 +108,7 @@
                             <a href="{{ path('atlas_front_end_gallery') }}">Gallery</a>
                         </li>
                         <li>
-                            <a href="{{ path('atlas_front_end_help') }}" >Help</a>
+                            <a href="{{ path('atlas_front_end_help') }}" >FAQ</a>
                         </li>
                     </ul>
                 </div><!-- /nav-collapse -->                                
@@ -129,7 +130,12 @@
 {% block copyright %}
 <!--=== Copyright ===-->
 <div class="copyright">
-</div><!--/copyright-->	
+    <div class="container">
+        <div class="row-fluid">
+            <div class="span12" id="footer_text"><p>2013 © Atlas Hostels PLC. <a href="{{ path('atlas_front_end_privacy_policy') }}">Privacy Policy</a> | <a href="{{ path('atlas_front_end_terms') }}">Terms &amp; Conditions</a> | <a href="{{ path('atlas_front_end_location') }}">Contact Us</a> | <a href="{{ path('atlas_front_end_investors') }}">Investor Relations</a> </p></div>
+        </div><!--/row-fluid-->
+    </div><!--/container-->	
+</div>
 <!--=== End Copyright ===-->
 {% endblock %}
 
@@ -139,29 +145,28 @@
 <script type="text/javascript" src="/assets/js/modernizr.custom.js"></script>        
 <script type="text/javascript" src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script> 
 <!-- JS Implementing Plugins -->           
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <script type="text/javascript" src="/assets/plugins/flexslider/jquery.flexslider-min.js"></script>
+<script type="text/javascript" src="/assets/plugins/gmap/gmap.js"></script>
+<script type="text/javascript" src="/assets/plugins/back-to-top.js"></script>
 <script type="text/javascript" src="/assets/plugins/parallax-slider/js/modernizr.js"></script>
 <script type="text/javascript" src="/assets/plugins/parallax-slider/js/jquery.cslider.js"></script> 
 <script type="text/javascript" src="/assets/plugins/bxslider/jquery.bxslider.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script type="text/javascript" src="/assets/plugins/gmap/gmap.js"></script>
-<script type="text/javascript" src="/assets/plugins/back-to-top.js"></script>
 <!-- JS Page Level -->           
 <script type="text/javascript" src="/assets/js/app.js"></script>
 <script type="text/javascript" src="/assets/js/pages/index.js"></script>
+<script type="text/javascript" src="/assets/js/pages/contact.js"></script>
 <script type="text/javascript" src="/assets/plugins/fancybox/source/jquery.fancybox.pack.js"></script>
 <script type="text/javascript" src="/assets/plugins/revolution_slider/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
 <script type="text/javascript" src="/assets/plugins/revolution_slider/rs-plugin/js/jquery.themepunch.revolution.min.js"></script> 
-
 <script type="text/javascript">
     jQuery(document).ready(function() {
         App.init();
         App.initSliders();
-        Index.initRevolutionSlider();        
+        Contact.initMap();        
         {% block js_init %}{% endblock %}  
     });
 </script>
-
 <!--[if lt IE 9]>
 <script src="/assets/js/respond.js"></script>
 <![endif]-->
