--- a/src/Atlas/FrontEndBundle/Resources/views/Page/gallery.html.twig
+++ b/src/Atlas/FrontEndBundle/Resources/views/Page/gallery.html.twig
@@ -17,107 +17,115 @@
 
 <!--=== Content Part ===-->
 <div class="container">				
-	<div class="row-fluid gallery">
-        <ul class="thumbnails">
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #1" href="/assets/img/carousel/9.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/9.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #2" href="/assets/img/carousel/2.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/2.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #3" href="/assets/img/carousel/3.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/3.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #4" href="/assets/img/carousel/4.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/4.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-        </ul><!--/thumbnails-->
+    <div class="row-fluid">
+        {% include '::column_left.html.twig' %}
+        <div class="span6">
+            <!-- Contacts -->
+            <div class="headline"><h3>Photos</h3></div>
+            <ul class="thumbnails">
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #1" href="/assets/img/carousel/9.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/9.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #2" href="/assets/img/carousel/2.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/2.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #3" href="/assets/img/carousel/3.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/3.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #4" href="/assets/img/carousel/4.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/4.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+            </ul><!--/thumbnails-->
 
-        <ul class="thumbnails">
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #5" href="/assets/img/carousel/5.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/5.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #6" href="/assets/img/carousel/6.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/6.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #7" href="/assets/img/carousel/7.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/7.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #8" href="/assets/img/carousel/8.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/8.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-        </ul><!--/thumbnails-->
-        
-        <ul class="thumbnails">
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #9" href="/assets/img/carousel/9.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/9.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #10" href="/assets/img/carousel/10.jpg">
-                    <div class="overlay-zoom">	
-                        <img src="/assets/img/carousel/10.jpg" alt="" />
-                        <div class="zoom-icon"></div>					
-                    </div>												
-                </a>
-            </li>
-        </ul><!--/thumbnails-->
+            <ul class="thumbnails">
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #5" href="/assets/img/carousel/5.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/5.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #6" href="/assets/img/carousel/6.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/6.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #7" href="/assets/img/carousel/7.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/7.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #8" href="/assets/img/carousel/8.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/8.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+            </ul><!--/thumbnails-->
 
-        <div class="pagination pagination-right">
-            <ul>
-                <li><a href="#">Prev</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li class="active"><a>3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">Next</a></li>
-            </ul>
-        </div>			
+            <ul class="thumbnails">
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #9" href="/assets/img/carousel/9.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/9.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+                <li class="span3">
+                    <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #10" href="/assets/img/carousel/10.jpg">
+                        <div class="overlay-zoom">	
+                            <img src="/assets/img/carousel/10.jpg" alt="" />
+                            <div class="zoom-icon"></div>					
+                        </div>												
+                    </a>
+                </li>
+            </ul><!--/thumbnails-->
+
+            <div class="pagination pagination-right">
+                <ul>
+                    <li><a href="#">Prev</a></li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li class="active"><a>3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">Next</a></li>
+                </ul>
+            </div>			
+        </div>
+
+        {% include '::column_right.html.twig' %}
+
     </div><!--/row-fluid-->
 </div><!--/container-->		
 <!--=== End Content Part ===-->
