--- a/web/assets/plugins/bootstrap/css/bootstrap.css
+++ b/web/assets/plugins/bootstrap/css/bootstrap.css
@@ -773,7 +773,7 @@ h2 {
 }
 
 h3 {
-  font-size: 24.5px;
+  font-size: 21px;
 }
 
 h4 {
@@ -928,7 +928,7 @@ blockquote p {
 blockquote small {
   display: block;
   line-height: 20px;
-  color: #999999;
+  color: #AB0765;
 }
 
 blockquote small:before {
@@ -1097,7 +1097,7 @@ input[type="color"],
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 20px;
-  color: #555555;
+  color: #AB0765;
   vertical-align: middle;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
@@ -1131,7 +1131,7 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   background-color: #ffffff;
-  border: 1px solid #cccccc;
+  border: 1px solid #AB0765;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
