updated the graphics

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -57,7 +57,7 @@
             {% block logo %}
             <!-- Logo -->       
             <div class="logo">                                             
-                <a href="/"><img width="219" height="106" id="logo-header" src="/assets/img/atlashostels.png" alt="Atlas Hostels" title="Atlas Hostels"></a>
+                <a href="/"><img id="logo-header" src="/assets/img/atlashostels.png" alt="Atlas Hostels" title="Atlas Hostels"></a>
             </div><!-- /logo -->                  
             {% endblock %}
 
