--- a/app/Resources/views/column_right.html.twig
+++ b/app/Resources/views/column_right.html.twig
@@ -24,7 +24,7 @@
             <div style="border:2px solid #AB0765" id="map" class="sidebar map margin-bottom-40"></div>
             <div class="headline"><h3>Follow us</h3></div>
             <div style="float:left;">
-                <a href="#"><img src="/assets/img/twitter_stamp.png" height="150" width="150"></a>
+                <a href="#"><img src="/assets/img/twitter_stamp.png"></a>
             </div>
             <div style="float:right;">
                 <a href="#"><img src="/assets/img/Free-Wifi.png" height="100" width="100"></a>
